config-root/namespaces/jx-staging/jx3-demo-golang-http-2021-01-16/jx3-demo-golang-http-2021-01-16-jx3-demo-golang-http-2021-01-16-deploy.yaml
# Source: jx3-demo-golang-http-2021-01-16/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-demo-golang-http-2021-01-16-jx3-demo-golang-http-2021-01-16
  labels:
    draft: draft-app
    chart: "jx3-demo-golang-http-2021-01-16-0.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx3-demo-golang-http-2021-01-16-jx3-demo-golang-http-2021-01-16
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-demo-golang-http-2021-01-16-jx3-demo-golang-http-2021-01-16
    spec:
      serviceAccountName: jx3-demo-golang-http-2021-01-16-jx3-demo-golang-http-2021-01-16
      containers:
        - name: jx3-demo-golang-http-2021-01-16
          image: "10.152.183.96/ascheman/jx3-demo-golang-http-2021-01-16:0.0.4"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
